# orxaq-ops

./: .editorconfig  .env.autonomy.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  GOVERNANCE.md  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.codex-autonomy/: resilience_runbook.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
config/: api_interop_policy.json  backend_portfolio_policy.json  codex_result.schema.json  deterministic_backlog_policy.json  git_delivery_policy.json  git_hygiene_policy.json  lanes.json  litellm_swarm_router.json  local_model_fleet.json  local_model_idle_guard.json  local_model_process_watchdog.json  mcp_context.example.json  mcp_context.routellm_npv.example.json  microbench_suite.yaml  objective.md  pr_tier_policy.json  pricing.json  privilege_policy.json  providers.example.yaml  recent_feedback.json  routellm_policy.json  routellm_policy.launch10.json  routellm_policy.local-fast.json  routellm_policy.local-lmstudio-resume.json  routellm_policy.local-strong.json  routellm_policy.local-workhorse.json  router.example.yaml  routing_policy.yaml  rpa_schedule.example.json  skill_protocol.json  t1_model_policy.json  task_queue.example.json  task_queue.schema.json  tasks.json  tasks.json.bak_20260210T0123  tasks.json.bak_20260210T0124  tasks_distributed_coordinator_ha_remaining.json  tasks_distributed_coordinator_ha_split.json  upgrade_lifecycle_policy.json
docs/: AGENT_COLLABORATION.md  AI_BEST_PRACTICES.md  AUTONOMY_RELIABILITY_ENHANCEMENT.md  DASHBOARD.md  DASHBOARD_FAILURE_MODES_PREVENTION_PLAN.md  DASHBOARD_IMPROVEMENT_PLAN.md  DASHBOARD_UX_AUTONOMOUS_EXECUTION_PLAN.md  DASHBOARD_UX_REVIEW_REDESIGN_REPORT.md  DISTRIBUTED_COORDINATOR_DMN_DAG_HA_PLAN.md  DISTRIBUTED_COORDINATOR_DMN_DAG_REMAINING_WORK_PLAN.md  EVENT_DRIVEN_REDESIGN_PLAN.md  EVENT_DRIVEN_ROOT_CAUSE_ANALYSIS.md  FULL_AUTONOMY_DASHBOARD_PLAN.md  ISSUE_4_REVIEW_EVIDENCE.md  LOCAL_MODEL_IDLE_AUTORECOVERY_PLAN.md  LOCAL_MODEL_NETWORK_RESILIENCE_PLAN.md  LOCAL_MODEL_WORKHORSE_AUTONOMY_PLAN.md  MODEL_INSTRUCTION_BRAND_MATRIX.md  MULTI_AGENT_LANES.md  ROUTELLM_NPV_AUTONOMY_PLAN.md  ROUTER.md  STATE_OF_THE_ART_ROUTING_AUTONOMY_PLAN.md  VERSIONING.md  VSCODE_COLLAB_AUTONOMY_RUNBOOK.md  autonomy-halt-mitigation.md  release-pypi.md  (+1 more)
(+288 files in other folders)
